<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_picker_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/date_picker_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_today" />

        <TextView
            android:id="@+id/date_picker_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/date_picker_left_arrow"
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/date_picker_year_left_arrow_description"
            android:src="@drawable/left_chevron" />

        <TextView
            android:id="@+id/date_picker_year_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/date_picker_year_month"/>

        <ImageView
            android:id="@+id/date_picker_right_arrow"
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/date_picker_year_right_arrow_description"
            android:src="@drawable/right_chevron"/>

    </LinearLayout>
    <!--星期显示区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_picker_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_sunday" />

        <TextView
            android:id="@+id/date_picker_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_monday"/>

        <TextView
            android:id="@+id/date_picker_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_tuesday"/>

        <TextView
            android:id="@+id/date_picker_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_wednesday"/>

        <TextView
            android:id="@+id/date_picker_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_thursday"/>

        <TextView
            android:id="@+id/date_picker_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_friday"/>

        <TextView
            android:id="@+id/date_picker_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/date_picker_saturday"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/date_picker_recycler_view"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>